feat: crear estructura de paquetes service y lógica de negocio